--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,113 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 300;
+    font-size: 1.2rem;
+    background-color: #444;
+    color: #fff;
+    text-align: center;
+  }
+  
+  ol, ul {
+    padding-left: 30px;
+  }
+  
+  .board-row:after {
+    clear: both;
+    content: "";
+    display: table;
+  }
+  
+  .status {
+    margin-bottom: 10px;
+  }
+  
+  .square {
+    background: #fff;
+    border: 1px solid #999;
+    float: left;
+    font-size: 24px;
+    font-weight: bold;
+    line-height: 34px;
+    height: 34px;
+    margin-right: -1px;
+    margin-top: -1px;
+    padding: 0;
+    text-align: center;
+    width: 34px;
+  }
+  
+  .square:focus {
+    outline: none;
+  }
+  
+  .kbd-navigation .square:focus {
+    background: #ddd;
+  }
+  
+  .game {
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .game-info {
+    margin-left: 20px;
+  }
+  
+  .FancyBorder {
+    padding: 10px 10px;
+    border: 10px solid;
+  }
+  
+  .FancyBorder-blue {
+    border-color: blue;
+  }
+  
+  .Dialog-title {
+    margin: 0;
+    font-family: sans-serif;
+  }
+  
+  .Dialog-message {
+    font-size: larger;
+  }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+  html, body, #root {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .SplitPane {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .SplitPane-left {
+    float: left;
+    width: 30%;
+    height: 100%;
+  }
+  
+  .SplitPane-right {
+    float: left;
+    width: 70%;
+    height: 100%;
+  }
+  
+  .Contacts {
+    width: 100%;
+    height: 100%; 
+    background: lightblue;
+  }
+  
+  .Chat {
+    width: 100%;
+    height: 100%; 
+    background: pink;
+  }
+
+  h1, h2{
+    font-weight: 300;
+  }
+
+  
+
